kanc/src/tests/sample_code/should_fail/single_file/variant_return_type/param.ph
type U {
    .U: U,
}

type Foo {
    .Bar(a: U): a,
}
